--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 	"dependencies": {
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.43.3",
-		"react-native-router-flux": "^3.38.0"
+		"react-native-router-flux": "^3.38.0",
+		"react-redux": "^5.0.4",
+		"redux": "^3.6.0"
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
